feat: support update tcp service
